--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ bleach==6.1.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
@@ -80,6 +81,8 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.2
+pywin32==308
+pywinpty==2.0.14
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
